need to fix the horizontal scroll

--- a/index.css
+++ b/index.css
@@ -164,10 +164,28 @@
     }
   }
 
-  .content {
-    
-    height: 500px;
+ 
+  body {
+    overscroll-behavior: none;
+    height: 100vh;
   }
+  .verticalscroll {
+    overscroll-behavior: none;
+    height: 100%;
+    display: flex;
+    flex-wrap: nowrap;
+  }
+
+  .panel {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    color: white;
+    background-color: blue;
+  }
+  
+  
   
   
 
